@@ -3,6 +3,7 @@
 - In auditd, check for duplicate remote connections before accepting
 - Remove trailing ':' if any are at the end of acct fields in ausearch
 - Update remote logging code to do better sanity check of data
+- Fix audisp-prelude to prefer files if multiple path records are encountered
 
 1.7.14
 - In auditctl rules allow a0-a3 to be negative numbers
